unpackaged/main/default/objects/Stripe_Customer__c/fields/Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Revenue__c</fullName>
    <formula>Monthly_Revenue__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>