unpackaged/main/default/objects/Stripe_Customer__c/fields/Current_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Revenue__c</fullName>
    <label>zOLD Current Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>