unpackaged/main/default/objects/Stripe_Customer__c/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted?</label>
    <type>Checkbox</type>
</CustomField>