unpackaged/main/default/objects/Stripe_Customer__c/fields/Is_Self_Serve__c.field-meta.xml
<CustomField>
    <fullName>Is_Self_Serve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zOLD Is Self Serve?</label>
    <type>Checkbox</type>
</CustomField>