unpackaged/main/default/objects/Stripe_Customer__c/fields/Lifetime_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Revenue__c</fullName>
    <label>zOLD Lifetime Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>