unpackaged/main/default/objects/Stripe_Customer__c/fields/Num_Seats__c.field-meta.xml
<CustomField>
    <fullName>Num_Seats__c</fullName>
    <label># Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>