unpackaged/main/default/objects/Stripe_Customer__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>zOLD Products</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>