unpackaged/main/default/objects/Stripe_Customer__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>zOLD State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>