unpackaged/main/default/objects/Stripe_Customer__c/fields/Stripe_Customer_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/customers/&quot;&amp; Stripe_Customer_ID__c , &quot;View in Stripe&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Customer Link</label>
    <type>Text</type>
</CustomField>