unpackaged/main/default/objects/Stripe_Customer__c/fields/Stripe_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_ID__c</fullName>
    <label>zOLD Stripe Subscription ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>