unpackaged/main/default/objects/Stripe_Customer__c/fields/Stripe_Subscription_Link__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/subscriptions/&quot;&amp; Stripe_Subscription_ID__c  , &quot;View in Stripe&quot; ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zOLD Stripe Subscription Link</label>
    <type>Text</type>
</CustomField>